--- a/src/content/champions/valeria-salis.yaml
+++ b/src/content/champions/valeria-salis.yaml
@@ -86,7 +86,7 @@ activities:
     dateFrom: 2025-03-17
     dateTo: 2025-03-17
     title: "Impatto Digitale: Riflessioni sull'Utilizzo Responsabile delle Innovazioni Tecnologiche"
-    description: "The idea for this talk started with a question: "What if we lived in a world where we had to pay for the environmental impact of every digital activity? Would we make the same choices? Or not?". I then analyse some common digital activities and their environmental impacts such as writing/sending emails, watching a TV series on a streaming platform and so on."
+    description: "The idea for this talk started with a question: \"What if we lived in a world where we had to pay for the environmental impact of every digital activity? Would we make the same choices? Or not?\" I then analyse some common digital activities and their environmental impacts such as writing/sending emails, watching a TV series on a streaming platform and so on."
     url: https://www.youtube.com/live/_xlHncHAOoo?si=DrdVLML6lgQTUPZT&t=877
     relatedEvent: Locanda Tech Tales
   - contributionType: writing
