Update Rafael Ferreira's profile: corrected GitHub username and updated personal website URL.

--- a/src/content/champions/rafael-ferreira.yaml
+++ b/src/content/champions/rafael-ferreira.yaml
@@ -16,9 +16,9 @@ bio: |
  Although I don't yet work directly with Green Software in my daily routine, I dedicate part of my time studying and advocating for sustainable software practices, especially from a DevOps and infrastructure perspective. I'm passionate about the role that cloud optimization, efficient architectures, and automation play in reducing the environmental impact of digital systems. I regularly explore and share insights on the topic through blog posts, talks, and community engagements. 
 type: normal
 social:
-  github: rafaelmaferreira
+  github: orafaelferreiraa
   linkedin: rafaelmaferreira
-  website: https://rafaelmaferreira.com.br/
+  website: https://orafaelferreira.com/
 activities:
   - contributionType: speaking
     linkedGSFProject: Green Software Speakers
