Adding activities for Ines Garcia

--- a/src/content/champions/ines-garcia.yaml
+++ b/src/content/champions/ines-garcia.yaml
@@ -22,6 +22,21 @@ social:
   twitter: inescapinezka
 activities:
   - contributionType: writing
+    linkedGSFProject: Other/Unlisted
+    subtype: personal-blog-post
+    dateFrom: 2025-07-25
+    dateTo: 2025-07-25
+    title: The ICJ Just Declared Climate Action a Legal Duty
+    description: |
+     " #Climate NEWS
+
+     Inaction is now ilegal!
+     The International Court of Justice (International Court of Justice (ICJ)) in The Hague, Netherlands, issued its advisory opinion on the obligations of States in respect of climate change, read out by the President of the Court, Judge Iwasawa Yuji, on Wednesday this very week. 
+     Here my explainer and how does that affect you.
+
+     Extended appreciation for Outrage + Optimism, especially Christiana Figueres energy is contagious!"
+    url: https://www.linkedin.com/pulse/icj-just-declared-climate-action-legal-duty-ines-garcia-u6aae/
+  - contributionType: writing
     linkedGSFProject: Transforming Organisational Software Sustainability
     subtype: personal-blog-post
     dateFrom: 2025-06-27
